--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "upload-sourcemaps-raygun",
-  "version": "0.0.0",
+  "name": "await-local-workflow-run",
+  "version": "0.0.1",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Await the completion of a local workflow run.",
+  "author": "Tom Varley",
+  "license": "MIT",
   "main": "lib/main.js",
+  "homepage": "https://github.com/tomvarley/upload-sourcemaps-raygun#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomvarley/upload-sourcemaps-raygun.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tomvarley/upload-sourcemaps-raygun/issues"
+  },
   "scripts": {
     "build:bundle": "npm run build:types && node ./esbuild.config.mjs",
     "build:types": "tsc",
@@ -14,22 +24,15 @@
     "release": "release-it",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
-  },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.9.1",
+    "@actions/github": "^5.0.3",
+    "@octokit/webhooks-types": "^6.3.6",
+    "luxon": "^3.0.3"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "@types/luxon": "^3.0.0",
     "@types/node": "^18.6.3",
     "@typescript-eslint/parser": "^5.31.0",
     "chalk": "^5.0.1",
@@ -47,5 +50,10 @@
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
-  }
+  },
+  "keywords": [
+    "actions",
+    "node",
+    "setup"
+  ]
 }
