--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,26 +4,14 @@ on:
   push:
 
 jobs:
-  test-check:
+  test-run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Await a workflow
         uses: ./
         with:
-          token: ${{ github.token }}
-          workflow: sleep.yml
-          check_name: short
-          timeout_mins: 5
-          poll_interval_ms: 10000 # 10 seconds
-  test-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Await a workflow
-        uses: ./
-        with:
-          token: ${{ github.token }}
-          workflow: sleep.yml
-          timeout_mins: 5
-          poll_interval_ms: 10000 # 10 seconds
+          token: asdasd
+          base_url: sleep.yml
+          folder: short
+
