--- a/action.yml
+++ b/action.yml
@@ -1,24 +1,19 @@
-name: Await Local Workflow Run
-description: Wait until the completion of a local repository workflow run before another step.
-author: Alex Miller
+name: Upload Sourcemaps to Raygun
+description: Upload generated sourcemaps to Raygun
+author: Tom Varley
 branding:
   icon: activity
   color: gray-dark
 inputs:
   token:
-    description: GitHub Personal Access Token for making API requests.
+    description: Raygun external access token to allow sending of sourcemaps
     required: true
-  workflow:
+  base_url:
     required: true
     description: The filename of the workflow that you wish to await completion of.
-  check_name:
-    description: A specific check within the workflow to wait for. Await all checks if this is not specified.
-  timeout_mins:
-    description: Time until giving up on the workflow checks completion.
-    default: 15
-  poll_interval_ms:
-    description: Frequency to poll the workflow run for a status.
-    default: 15000
+  folder:
+    description: Target folder to check for sourcemaps
+    default: './'
 runs:
   using: node16
   main: dist/index.js
