--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,10 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Await a workflow
-        uses: ./
+      - name: Send things
+        uses: ../action.yml
         with:
           token: asdasd
-          base_url: sleep.yml
-          folder: short
+          base_url: https://www.woo.com
 
