--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ inputs:
     required: true
   base_url:
     required: true
-    description: The filename of the workflow that you wish to await completion of.
+    description: The base url of the sourcemap you would like to associate the file with
   folder:
     description: Target folder to check for sourcemaps
     default: './'
