--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@actions/core": "^1.9.1",
     "@actions/github": "^5.0.3",
     "@octokit/webhooks-types": "^6.3.6",
+    "fs-jetpack": "^4.3.1",
     "luxon": "^3.0.3"
   },
   "devDependencies": {
