--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@actions/github": "^5.0.3",
     "@octokit/webhooks-types": "^6.3.6",
     "fs-jetpack": "^4.3.1",
-    "luxon": "^3.0.3"
+    "luxon": "^3.0.3",
+    "node-fetch": "^3.2.10"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
