--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@actions/core": "^1.9.1",
     "@actions/github": "^5.0.3",
     "@octokit/webhooks-types": "^6.3.6",
+    "form-data": "^4.0.0",
     "fs-jetpack": "^4.3.1",
     "luxon": "^3.0.3",
     "node-fetch": "^3.2.10"
